# logo

./: .gitignore  .task.cfg.mk  Dockerfile  Makefile  README.md  generate-all.py  logo.nimble  pyproject.toml  setup.cfg
.github/workflows/: build-publish.yml
docs/: index.html
docs/ascii-variants/: logo-braille-threshold20-h15.txt  logo-braille-threshold20.txt  logo-braille-threshold50-h20.txt  logo-color-h30.txt  logo-h50.txt
logo/: cli.py  config.py  main.py  shapes.py  utils.py
logo/css/: base.css  dark.css
scripts/: ascii.nims  generate-all.py
src/: logo.nim
src/css/: animation.css  base.css  dark.css  light.css
